# HH.SJ.Vacancy.Scalper

./: README.md  main.py  pyproject.toml  vacancies.json
Utils/: Classes.py  classes.py  get_API.py  json_saver.py  main.py  vacansy.py
