[tool.poetry]
name = "hh-sj-vacany"
version = "0.1.0"
description = "HeadHunter, SuperJob vacancy scalping program"
authors = ["Luka Shermadini <Shermadinil.luka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
